AB#973 Simplify code